# grpc-test

./: .gitignore  CMakeLists.txt  README  README.md
cmake/: generate_protobuf.cmake
include/grpc_test/: Database.h  Logger.h  Repository.h  Table.h
include/grpc_test/models/: Client.h  Invoice.h  InvoiceDetails.h  Product.h
include/grpc_test/services/: ClientService.h  InvoiceService.h  ProductService.h
protos/common/: ServiceStatus.proto
protos/models/: Client.proto  Invoice.proto  InvoiceDetails.proto  Product.proto
protos/protobuf/: Client.pb.cc  Client.pb.h  Invoice.pb.cc  Invoice.pb.h  InvoiceDetails.pb.cc  InvoiceDetails.pb.h  Product.pb.cc  Product.pb.h
protos/protobuf/common/: ServiceStatus.grpc.pb.cc  ServiceStatus.grpc.pb.h  ServiceStatus.pb.cc  ServiceStatus.pb.h  ServiceStatus_mock.grpc.pb.h
protos/protobuf/models/: Client.grpc.pb.cc  Client.grpc.pb.h  Client.pb.cc  Client.pb.h  Client_mock.grpc.pb.h  Invoice.grpc.pb.cc  Invoice.grpc.pb.h  Invoice.pb.cc  Invoice.pb.h  InvoiceDetails.grpc.pb.cc  InvoiceDetails.grpc.pb.h  InvoiceDetails.pb.cc  InvoiceDetails.pb.h  InvoiceDetails_mock.grpc.pb.h  Invoice_mock.grpc.pb.h  Product.grpc.pb.cc  Product.grpc.pb.h  Product.pb.cc  Product.pb.h  Product_mock.grpc.pb.h
protos/protobuf/services/: ClientService.grpc.pb.cc  ClientService.grpc.pb.h  ClientService.pb.cc  ClientService.pb.h  ClientService_mock.grpc.pb.h  InvoiceService.grpc.pb.cc  InvoiceService.grpc.pb.h  InvoiceService.pb.cc  InvoiceService.pb.h  InvoiceService_mock.grpc.pb.h  ProductService.grpc.pb.cc  ProductService.grpc.pb.h  ProductService.pb.cc  ProductService.pb.h  ProductService_mock.grpc.pb.h
protos/services/: ClientService.proto  InvoiceService.proto  ProductService.proto
src/: Entry.cc
